--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,11 @@
 }
 
 .violet-gradient {
-  background: #804dee;
-  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+  background: #8693f2;
+  background: linear-gradient(-90deg, #8693f2 0%, rgba(60, 51, 80, 0) 100%);
   background: -webkit-linear-gradient(
     -90deg,
-    #804dee 0%,
+    #8693f2 0%,
     rgba(60, 51, 80, 0) 100%
   );
 }
