--- a/src/index.css
+++ b/src/index.css
@@ -360,3 +360,11 @@ button[data-glow] span {
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+code {
+  background: #706e6e96;
+  border: 1px solid #706e6e96;
+  border-radius: 2px;
+  color: #e4d8d8;
+  font-family: monospace;
+}
